# ChangeLog for sys-devel/libtool
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.181 2010/11/13 12:02:17 armin76 Exp $

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org> libtool-2.2.10.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #338092

  10 Nov 2010; Mike Frysinger <vapier@gentoo.org> libtool-2.4.ebuild:
  Move into ~arch.

  14 Oct 2010; Brent Baude <ranger@gentoo.org> libtool-2.2.10.ebuild:
  Marking libtool-2.2.10 ppc for bug 338092

  13 Oct 2010; Markus Meier <maekke@gentoo.org> libtool-2.2.10.ebuild:
  arm stable, bug #338092

  06 Oct 2010; Jeroen Roovers <jer@gentoo.org> libtool-2.2.10.ebuild:
  Stable for HPPA (bug #338092).

  05 Oct 2010; Markus Meier <maekke@gentoo.org> libtool-2.2.10.ebuild:
  x86 stable, bug #338092

  26 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> libtool-2.2.10.ebuild:
  ppc64 stable wrt #338092

  24 Sep 2010; Markos Chandras <hwoarang@gentoo.org> libtool-2.2.10.ebuild:
  Stable on amd64 wrt bug #338092

*libtool-2.4 (23 Sep 2010)

  23 Sep 2010; Mike Frysinger <vapier@gentoo.org> +libtool-2.4.ebuild:
  Version bump #338448 by Samuli Suominen.

  06 Jul 2010; Mike Frysinger <vapier@gentoo.org> libtool-2.2.10.ebuild:
  Force newer version of autoconf #327079 by Matt Turner.

  06 Jul 2010; Mike Frysinger <vapier@gentoo.org> libtool-2.2.6.ebuild,
  libtool-2.2.10.ebuild:
  Block older automake #304055 by Dennis Nezic.

*libtool-2.2.10 (09 Jun 2010)

  09 Jun 2010; Mike Frysinger <vapier@gentoo.org> +libtool-2.2.10.ebuild:
  Version bump.

*libtool-2.2.8-r1 (08 Jun 2010)

  08 Jun 2010; Mike Frysinger <vapier@gentoo.org> +libtool-2.2.8-r1.ebuild,
  +files/libtool-2.2.8-versioning-as-needed-test.patch:
  Add patch from upstream for as-needed test failures #321551 by Xake.
  Transition the SLOT (and EAPI) so we can install libtool-1.5.x libltdl ABI
  in parallel. Require newer binutils to avoid old as-needed test failures.