@@ -26,6 +26,7 @@ EBUILD libtool-1.5.26-r1.ebuild 875 RMD160 17f965c1c7b80bb46f3d280db0e193d2a5f30
 EBUILD libtool-1.5.26.ebuild 3501 RMD160 7c8b2dd8f0f5990445d3f025f4178321e053b9e2 SHA1 433fb3572c14b9904b0d05a5895e411258760146 SHA256 3df5bef34987b8bbd65e7195940a524e74d74e69d42208c8c9559296353edc2a
 EBUILD libtool-2.2.10.ebuild 3146 RMD160 d8eeed6903e16e459fdee7f628a2c493f0b5b742 SHA1 5834135fd11a7d367df5d47d57f28d475cadaa88 SHA256 0fdf0f6896882d23df9180389e98106af40459005e89fe422975a52f71f7a7de
 EBUILD libtool-2.2.6b.ebuild 3678 RMD160 4a896a7c10edd891e0451f36eb95f7171a127345 SHA1 a3c9190d10cbd5449962e943815dd5abd5c8e513 SHA256 8c0ff2413f4cbed579914574b8a3088f0bbe051c50338e5a20f8493f1ad40623
+EBUILD libtool-2.4-r1.ebuild 3127 RMD160 0916331214da01de3c3020018d3b1a8187fc24e9 SHA1 7af2f38dba077178d6d164a068e84f58ae3c418e SHA256 5a883c652c7884b78454220e28aed8031b7204917f88bf3f72b5b05c864e94fa
 EBUILD libtool-2.4.ebuild 3139 RMD160 39e5241870c66a184ec5a40041fe55f2b37c93d1 SHA1 c48a2f7629f3627820b3f97ba02a1f13e8f1b06a SHA256 fbfd4450fee84b50b2e660f1d81ef7e1cadbc42a12fa44727d4a42255aa3ab01
-MISC ChangeLog 26889 RMD160 ab51788edacb07e1c85b011caf80b6a3b226ad14 SHA1 0b1912eedec6281ae8471f8a24e7ab4f4e1a7735 SHA256 29f82011420d5813c178b41aabeba59569004bd3d43d559bcfaa7e931688ff0a
+MISC ChangeLog 27109 RMD160 2f7bc82cbecadf86d91e4b1e24a0c1db79325019 SHA1 67c26e63056081f5ab64aa2ea04d86e76031fe46 SHA256 09c4f3e05eca1197ae04bd2157c5ad6c3638c49d4a9af076463954f439eee5e7
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
