@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/libtool
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.181 2010/11/13 12:02:17 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.182 2010/11/29 15:12:34 flameeyes Exp $
+
+*libtool-2.4-r1 (29 Nov 2010)
+
+  29 Nov 2010; Diego E. Pettenò <flameeyes@gentoo.org> +libtool-2.4-r1.ebuild:
+  Add experimental revision without runtime dependency over autotools, trying
+  to deal with bug #317309.
 
   13 Nov 2010; Raúl Porcel <armin76@gentoo.org> libtool-2.2.10.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #338092
